[project]
name = "BVLS"
description="Python wrapper for the bounded value least squares algorithm"
authors=[{name = "Trever Hines", email = "hinest@umich.edu"}]
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ['numpy']

[project.urls]
Homepage = "https://github.com/treverhines/BVLS"

[build-system]
requires = ["scikit-build-core", "numpy"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
ninja.version = ">=1.10"
cmake.version = ">=3.17.2"